# cotocoa

./: .gitignore  README.md  fpm.toml  pyproject.toml
ctca4py/: ctca4py.py  fpm.toml
ctca4py/ctca4py/: __init__.py
