[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "ctca4py"
version = "1.0.0"

requires-python = ">=3.7"

description = "CoToCoA (Code To Code Adapter)"
readme = "README.md"

authors = [{ name = "Takeshi NANRI" }]

maintainers = [{ name = "Nkzono99", email = "j-nakazono@stu.kobe-u.ac.jp" }]

license = { file = "LICENSE" }

dependencies = ["numpy", "mpi4py"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Repository = "https://github.com/Nkzono99/cotocoa.git"
